# chatbot-rag-ray

./: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  api-collection.json  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  test_report.md
.github/workflows/: ci.yml  deploy.yml  security.yml
app/: __init__.py
app/agents/: graph.py
app/api/: router.py  routes.py
app/core/: __init__.py  config.py  constants.py  logging.py
app/memory/: manager.py
app/models/: schemas.py
app/services/: langfuse.py  llm.py  parser.py  rag.py
app/utils/: exceptions.py
data/raw_docs/: insurance_knowledge.json
docs/: API.md  QUICKSTART.md  TECHNICAL.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/services/: api.ts
frontend/src/test/: ChatContext.test.tsx  ChatInput.test.tsx  MessageBubble.test.tsx  api.test.ts
frontend/src/types/: index.ts
scripts/: ingest.py  setup.sh
tests/integration/: test_api.py
tests/unit/: test_graph.py  test_memory.py  test_rag.py  test_schemas.py
